lab-import-export

--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -769,32 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "parser_f() got an unexpected keyword argument 'index'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-3167ddbd2c84>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcols_fert\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'season'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'age'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'childish diseases'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'accidents or traumas'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'surgical intervation'\u001b[0m\u001b[0;34m,\u001b[0m              \u001b[0;34m'hight fevers'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'alcohol consumption'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'smoking habits'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'hours spent sitting'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'output'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfert_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfertility\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtst_url\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcols_fert\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: parser_f() got an unexpected keyword argument 'index'"
-     ]
-    }
-   ],
-   "source": [
-    "# Your code here:\n",
-    "cols_fert = ['season', 'age', 'childish diseases', 'accidents or traumas', 'surgical intervation', \\\n",
-    "             'hight fevers', 'alcohol consumption', 'smoking habits', 'hours spent sitting', 'output']\n",
-    "fert_url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt'\n",
-    "fertility = pd.read_csv(tst_url, sep=',', names = cols_fert)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -833,102 +808,107 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>55 0 81 0 -6 11 25 88 64 4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>56 0 96 0 52 -4 40 44 4 4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>O</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>50 -1 89 -7 50 0 39 40 2 1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>53 9 79 0 42 -2 25 37 12 4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>55 2 82 0 54 -6 26 28 2 1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>O</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       season  age  childish diseases  accidents or traumas  \\\n",
-       "0  55 0 81 0 -6 11 25 88 64 4  NaN                NaN                   NaN   \n",
-       "1   56 0 96 0 52 -4 40 44 4 4  NaN                NaN                   NaN   \n",
-       "2  50 -1 89 -7 50 0 39 40 2 1  NaN                NaN                   NaN   \n",
-       "3  53 9 79 0 42 -2 25 37 12 4  NaN                NaN                   NaN   \n",
-       "4   55 2 82 0 54 -6 26 28 2 1  NaN                NaN                   NaN   \n",
+       "   season   age  childish diseases  accidents or traumas  \\\n",
+       "0   -0.33  0.69                  0                     1   \n",
+       "1   -0.33  0.94                  1                     0   \n",
+       "2   -0.33  0.50                  1                     0   \n",
+       "3   -0.33  0.75                  0                     1   \n",
+       "4   -0.33  0.67                  1                     1   \n",
        "\n",
        "   surgical intervation  hight fevers  alcohol consumption  smoking habits  \\\n",
-       "0                   NaN           NaN                  NaN             NaN   \n",
-       "1                   NaN           NaN                  NaN             NaN   \n",
-       "2                   NaN           NaN                  NaN             NaN   \n",
-       "3                   NaN           NaN                  NaN             NaN   \n",
-       "4                   NaN           NaN                  NaN             NaN   \n",
+       "0                     1             0                  0.8               0   \n",
+       "1                     1             0                  0.8               1   \n",
+       "2                     0             0                  1.0              -1   \n",
+       "3                     1             0                  1.0              -1   \n",
+       "4                     0             0                  0.8              -1   \n",
        "\n",
-       "   hours spent sitting  output  \n",
-       "0                  NaN     NaN  \n",
-       "1                  NaN     NaN  \n",
-       "2                  NaN     NaN  \n",
-       "3                  NaN     NaN  \n",
-       "4                  NaN     NaN  "
+       "   hours spent sitting output  \n",
+       "0                 0.88      N  \n",
+       "1                 0.31      O  \n",
+       "2                 0.50      N  \n",
+       "3                 0.38      N  \n",
+       "4                 0.50      O  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Your code here:\n",
+    "cols_fert = ['season', 'age', 'childish diseases', 'accidents or traumas', 'surgical intervation', \\\n",
+    "             'hight fevers', 'alcohol consumption', 'smoking habits', 'hours spent sitting', 'output']\n",
+    "fert_url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt'\n",
+    "fertility = pd.read_csv(fert_url, names = cols_fert)\n",
     "fertility.head()"
    ]
   },
