--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# Your import here:\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "source": [
     "####  After importing pandas, let's find a dataset. In this lesson we will be working with a NASA dataset.\n",
     "\n",
-    "Run the code in the cell below to load the dataset containing information about asteroids that have landed on earth. This piece of code helps us open the URL for the dataset and deocde the data using UTF-8."
+    "Run the code in the cell below to load the dataset containing information about asteroids that have landed on earth. This piece of code helps us open the URL for the dataset and decode the data using UTF-8."
    ]
   },
   {
@@ -45,7 +45,6 @@
    "outputs": [],
    "source": [
     "# Run this code\n",
-    "\n",
     "from urllib.request import urlopen\n",
     "import json\n",
     "\n",
@@ -62,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "nasa = pd.read_json(json_data)\n",
+    "#display(nasa)"
    ]
   },
   {
@@ -79,12 +78,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>:@computed_region_cbhk_fwbd</th>\n",
+       "      <th>:@computed_region_nnqa_25f4</th>\n",
+       "      <th>fall</th>\n",
+       "      <th>geolocation</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nametype</th>\n",
+       "      <th>recclass</th>\n",
+       "      <th>reclat</th>\n",
+       "      <th>reclong</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [6.08333, 50....</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Aachen</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L5</td>\n",
+       "      <td>50.77500</td>\n",
+       "      <td>6.08333</td>\n",
+       "      <td>1880-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [10.23333, 56...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H6</td>\n",
+       "      <td>56.18333</td>\n",
+       "      <td>10.23333</td>\n",
+       "      <td>1951-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-113, 54.216...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>107000.0</td>\n",
+       "      <td>Abee</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>EH4</td>\n",
+       "      <td>54.21667</td>\n",
+       "      <td>-113.00000</td>\n",
+       "      <td>1952-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-99.9, 16.88...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1914.0</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>Acapulcoite</td>\n",
+       "      <td>16.88333</td>\n",
+       "      <td>-99.90000</td>\n",
+       "      <td>1976-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-64.95, -33....</td>\n",
+       "      <td>370</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>Achiras</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L6</td>\n",
+       "      <td>-33.16667</td>\n",
+       "      <td>-64.95000</td>\n",
+       "      <td>1902-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   :@computed_region_cbhk_fwbd  :@computed_region_nnqa_25f4  fall  \\\n",
+       "0                          NaN                          NaN  Fell   \n",
+       "1                          NaN                          NaN  Fell   \n",
+       "2                          NaN                          NaN  Fell   \n",
+       "3                          NaN                          NaN  Fell   \n",
+       "4                          NaN                          NaN  Fell   \n",
+       "\n",
+       "                                         geolocation   id      mass      name  \\\n",
+       "0  {'type': 'Point', 'coordinates': [6.08333, 50....    1      21.0    Aachen   \n",
+       "1  {'type': 'Point', 'coordinates': [10.23333, 56...    2     720.0    Aarhus   \n",
+       "2  {'type': 'Point', 'coordinates': [-113, 54.216...    6  107000.0      Abee   \n",
+       "3  {'type': 'Point', 'coordinates': [-99.9, 16.88...   10    1914.0  Acapulco   \n",
+       "4  {'type': 'Point', 'coordinates': [-64.95, -33....  370     780.0   Achiras   \n",
+       "\n",
+       "  nametype     recclass    reclat    reclong                     year  \n",
+       "0    Valid           L5  50.77500    6.08333  1880-01-01T00:00:00.000  \n",
+       "1    Valid           H6  56.18333   10.23333  1951-01-01T00:00:00.000  \n",
+       "2    Valid          EH4  54.21667 -113.00000  1952-01-01T00:00:00.000  \n",
+       "3    Valid  Acapulcoite  16.88333  -99.90000  1976-01-01T00:00:00.000  \n",
+       "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "a = nasa.head()\n",
+    "display(a)"
    ]
   },
   {
@@ -102,8 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "# value_counts ( ) : used to find the frequency of every value in a column\n",
+    "value_counts()\n"
    ]
   },
   {
@@ -120,6 +262,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "\n",
     "\n"
    ]
   },
@@ -305,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
