--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -47,7 +47,7 @@
     "# Run this code\n",
     "from urllib.request import urlopen\n",
     "import json\n",
-    "\n",
+    "#Hay que cargar el archivo primero, algo que no pasa en CSV\n",
     "response = urlopen(\"https://data.nasa.gov/resource/y77d-th95.json\")\n",
     "json_data = response.read().decode('utf-8', 'replace')"
    ]
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,12 +240,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fell     996\n",
+       "Found      4\n",
+       "Name: fall, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# value_counts ( ) : used to find the frequency of every value in a column\n",
-    "value_counts()\n"
+    "nasa[\"fall\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fell     996\n",
+       "Found      4\n",
+       "Name: fall, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nasa.fall.value_counts()"
    ]
   },
   {
@@ -257,13 +292,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n",
-    "\n"
+    "nasa.to_json('./nasa.json', orient = \"records\")"
    ]
   },
   {
