--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your import here:\n",
     "\n",
-    "import pandas as np"
+    "import pandas as pd"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "nasa = pd.DataFrame(json.loads(json_data))"
    ]
   },
   {
@@ -80,12 +80,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>:@computed_region_cbhk_fwbd</th>\n",
+       "      <th>:@computed_region_nnqa_25f4</th>\n",
+       "      <th>fall</th>\n",
+       "      <th>geolocation</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nametype</th>\n",
+       "      <th>recclass</th>\n",
+       "      <th>reclat</th>\n",
+       "      <th>reclong</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [6.08333, 50....</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Aachen</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L5</td>\n",
+       "      <td>50.775000</td>\n",
+       "      <td>6.083330</td>\n",
+       "      <td>1880-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [10.23333, 56...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>720</td>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H6</td>\n",
+       "      <td>56.183330</td>\n",
+       "      <td>10.233330</td>\n",
+       "      <td>1951-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-113, 54.216...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>107000</td>\n",
+       "      <td>Abee</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>EH4</td>\n",
+       "      <td>54.216670</td>\n",
+       "      <td>-113.000000</td>\n",
+       "      <td>1952-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-99.9, 16.88...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1914</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>Acapulcoite</td>\n",
+       "      <td>16.883330</td>\n",
+       "      <td>-99.900000</td>\n",
+       "      <td>1976-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-64.95, -33....</td>\n",
+       "      <td>370</td>\n",
+       "      <td>780</td>\n",
+       "      <td>Achiras</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L6</td>\n",
+       "      <td>-33.166670</td>\n",
+       "      <td>-64.950000</td>\n",
+       "      <td>1902-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  :@computed_region_cbhk_fwbd :@computed_region_nnqa_25f4  fall  \\\n",
+       "0                         NaN                         NaN  Fell   \n",
+       "1                         NaN                         NaN  Fell   \n",
+       "2                         NaN                         NaN  Fell   \n",
+       "3                         NaN                         NaN  Fell   \n",
+       "4                         NaN                         NaN  Fell   \n",
+       "\n",
+       "                                         geolocation   id    mass      name  \\\n",
+       "0  {'type': 'Point', 'coordinates': [6.08333, 50....    1      21    Aachen   \n",
+       "1  {'type': 'Point', 'coordinates': [10.23333, 56...    2     720    Aarhus   \n",
+       "2  {'type': 'Point', 'coordinates': [-113, 54.216...    6  107000      Abee   \n",
+       "3  {'type': 'Point', 'coordinates': [-99.9, 16.88...   10    1914  Acapulco   \n",
+       "4  {'type': 'Point', 'coordinates': [-64.95, -33....  370     780   Achiras   \n",
+       "\n",
+       "  nametype     recclass      reclat      reclong                     year  \n",
+       "0    Valid           L5   50.775000     6.083330  1880-01-01T00:00:00.000  \n",
+       "1    Valid           H6   56.183330    10.233330  1951-01-01T00:00:00.000  \n",
+       "2    Valid          EH4   54.216670  -113.000000  1952-01-01T00:00:00.000  \n",
+       "3    Valid  Acapulcoite   16.883330   -99.900000  1976-01-01T00:00:00.000  \n",
+       "4    Valid           L6  -33.166670   -64.950000  1902-01-01T00:00:00.000  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "nasa.head()"
    ]
   },
   {
@@ -99,12 +242,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fell     996\n",
+       "Found      4\n",
+       "Name: fall, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "nasa.fall.value_counts()"
    ]
   },
   {
@@ -116,12 +272,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "nasa.to_json('../your-code/nasa.json', orient='records')"
    ]
   },
   {
